test/org/midica/testfiles/failing/block-param-invalid.midica
INCLUDE inc/instruments.midica

(
	0 c /4
) v=50
